--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --config webpack.build.config.js",
     "start": "webpack serve --open --config webpack.dev.config.js",
     "eslint": "eslint",
-    "eslint:fix": "eslint --fix --ext .js src"
+    "eslint:fix": "eslint --fix --ext .js src",
+    "tsc": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +29,8 @@
     "sass": "^1.54.0",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
