--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "sass": "^1.54.0",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
+    "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.2",
+    "tslint": "^6.1.3",
     "typescript": "^4.9.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.74.0",
