--- a/package.json
+++ b/package.json
@@ -15,34 +15,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.18.9",
-    "@babel/preset-env": "^7.18.9",
     "@types/jest": "^29.2.5",
-    "babel-loader": "^8.2.5",
-    "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.7.1",
-    "dart-sass": "^1.25.0",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.3.1",
-    "mini-css-extract-plugin": "^2.6.1",
-    "sass": "^1.54.0",
-    "sass-loader": "^13.0.2",
-    "style-loader": "^3.3.1",
     "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.2",
     "tslint": "^6.1.3",
-    "typescript": "^4.9.4",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3",
-    "webpack-merge": "^5.8.0"
-  },
-  "dependencies": {
-    "dotenv-webpack": "^8.0.1",
-    "reset.css": "^2.0.2"
+    "typescript": "^4.9.4"
   }
 }
